для второго автотеста

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="color-scheme" content="dark light"/>
     <meta name="description" content="Что делать, когда не можешь делать ничего, или почему нам так сложно сконцентрироваться"/>
     <title>Сложно сосредоточиться</title>
-    <link rel="stylesheet" href="./fonts/fonts.css"/>
     <link rel="stylesheet" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./fonts/fonts.css"/>
     <link rel="stylesheet" href="./styles/variables.css"/>
     <link rel="stylesheet" href="./styles/style.css"/>
     <link rel="stylesheet" href="./styles/dark.css"/>
@@ -16,6 +16,7 @@
     <link rel="icon" href="./images/favicon.ico" sizes="any"/>
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml"/>
     <link rel="apple-touch-icon" href="./images/mobile-icon.png"/> 
+    
   </head>
   <body class="page">
 
@@ -51,15 +52,15 @@
       <h1 class="header__title">no focus</h1>
       <div class="header__text title-decor">
         <p>
-          Что делать, когда не можешь делать ничего
-Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+          Что делать, когда не можешь делать&nbsp;ничего<br />
+Или почему нам так сложно сконцентрироваться, особенно когда&nbsp; очень надо
         </p>
       </div>
     </header>
 
     <!--ОСНОВНОЙ КОНТЕНТ-->
     <main class="main">
-      <section class="why">
+      <section class="why content-section">
         <h2 class="section__title">
           Почему сосредоточиться так сложно
         </h2>
@@ -78,7 +79,7 @@
           </p>
         </div>
       </section>
-      <section class="what">
+      <section class="what content-section">
         <h2 class="section__title">
           Что снижает концентрацию внимания?
         </h2>
@@ -103,7 +104,7 @@
           </p>
         </div>
       </section>
-      <section class="how">
+      <section class="how content-section">
         <h2 class="section__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
         </h2>
@@ -127,7 +128,7 @@
           Прогуляйтесь
         </h4>
         <p class="section__text">
-          Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" clas="link" target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+          Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" class="link" target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
         </p>
         <h4 class="section__subtitle-normal title-decor">
           Хорошо ешьте
