для четвертого автотеста

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Что делать, когда не можешь делать ничего, или почему нам так сложно сконцентрироваться"/>
     <title>Сложно сосредоточиться</title>
     <link rel="stylesheet" href="./fonts/fonts.css"/>
-    <link rel="stylesheet" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./styles/globals.css"/>
     <link rel="stylesheet" href="./styles/variables.css"/>
     <link rel="stylesheet" href="./styles/style.css"/>
     <link rel="stylesheet" href="./styles/dark.css"/>
@@ -88,7 +88,7 @@
         </div>
       </section>
       <section class="what content-section">
-        <h2 class="section__title">
+        <h2 class="section__title what__details">
           Что снижает концентрацию внимания?
         </h2>
         <div class="section__content">
@@ -185,7 +185,7 @@
         </div>
       </section>
       <section class="pictures">
-        <h3 class="section__subtitle-bold title-decor">
+        <h3 class="section__subtitle-bold title-decor pictures__grid">
           А можно в картинках?
         </h3>
         <img src="./images/sunset.png" alt="Рисунок заката в горах в розово-сиреневых тонах" class="section__picture" loading="lazy">
