для шестого автотеста

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
         </div>
       </section>
       <section class="what content-section">
-        <h2 class="section__title what__details">
+        <h2 class="section__title">
           Что снижает концентрацию внимания?
         </h2>
-        <div class="section__content">
+        <div class="section__content what__details">
           <article class="section__paragraph">
             <h3 class="section__subtitle-bold title-decor">
             Многозадачность
@@ -173,7 +173,7 @@
         </div>
         </article>
         <article class="section__paragraph">
-          <h4 class="section__sibtitle-normal title-decor">
+          <h4 class="section__subtitle-normal title-decor">
           Читайте
         </h4>
         <div class="section__text">
